--- a/ifts6/src/app/app.component.html
+++ b/ifts6/src/app/app.component.html
@@ -1,1 +1,33 @@
-asdsad
+<header class="navbar navbar-primary navbar-top">
+    <div class="container">
+      <div class="row">
+        <div class="col-m-6 col-s-6">
+          <a class="navbar-brand bac-header" href="index.html" data-original-title="" title=""></a>
+        </div>
+        <div class="col-m-6 col-s-6 text-right oculto">
+          <h5 class="sub-brand"><img src="../assets/bac-header-2.png"></h5>
+          <!--<h5 class="sub-brand">Vamos Buenos Aires</h5>-->
+
+
+
+
+
+        </div>
+      </div>
+    </div>
+  </header>
+
+<div class="row">
+    <div class="col-xl-1">.col-md-1</div>
+    <div class="col-xl-1">.col-md-1</div>
+    <div class="col-xl-1">.col-md-1</div>
+    <div class="col-xl-1">.col-md-1</div>
+    <div class="col-xl-1">.col-md-1</div>
+    <div class="col-xl-1">.col-md-1</div>
+    <div class="col-xl-1">.col-md-1</div>
+    <div class="col-xl-1">.col-md-1</div>
+    <div class="col-xl-1">.col-md-1</div>
+    <div class="col-xl-1">.col-md-1</div>
+    <div class="col-xl-1">.col-md-1</div>
+    <div class="col-xl-1">.col-md-1</div>
+</div>
