--- a/ifts6/src/styles.css
+++ b/ifts6/src/styles.css
@@ -105,3 +105,19 @@ PARA WIDTH 600PX PARA ABAJO */
 .col-xl-11 {width: 91.66%;}
 .col-xl-12 {width: 100%;}
 }
+
+/* Estilo personalizado para los botones */
+.btn-custom {
+    background-color: #ff9900;
+    color: #ffffff;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    font-size: 16px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.btn-custom:hover {
+    background-color: #cc7700;
+}
