--- a/ifts6/src/app/app.component.html
+++ b/ifts6/src/app/app.component.html
@@ -2,7 +2,7 @@
     <div class="container">
       <div class="row">
         <div class="col-m-6 col-s-6 text-left oculto">
-          <h5 class="sub-brand"><img src="../assets/otto.jpg"></h5>
+          <h5 class="sub-brand"><img src="../assets/otto.jpg" height="80"> </h5>
           <!--<h5 class="sub-brand">Vamos Buenos Aires</h5>-->
         </div>
         <div class="col-m-6 col-s-6">
@@ -17,10 +17,10 @@
     </div>
   </header>
 
-<div class="row">
+<div class="container">
   <a href="index.html"><button class="btn btn-custom">Inicio</button></a>
   <a href="index.html"><button class="btn btn-custom">Institucional</button></a>
-  <a href="index.html"><button class="btn btn-custom">Carreras</button></a>
+  <a href="index.html"><button class="btn btn-custom">Carreras1</button></a>
   <a href="index.html"><button class="btn btn-custom">Ingreso</button></a>
   <a href="index.html"><button class="btn btn-custom">Extensión terciaria</button></a>
   <a href="index.html"><button class="btn btn-custom">Convenios</button></a>
