--- a/ifts6/src/app/app.component.html
+++ b/ifts6/src/app/app.component.html
@@ -7,7 +7,7 @@
         <div class="col-m-6 col-s-6 text-right oculto">
           <h5 class="sub-brand"><img src="../assets/bac-header-2.png"></h5>
           <!--<h5 class="sub-brand">Vamos Buenos Aires</h5>-->
-
+   <p>Holaaaaaaa</p>
 
 
 
