--- a/ifts6/src/app/app.component.html
+++ b/ifts6/src/app/app.component.html
@@ -1,6 +1,10 @@
 <header class="navbar navbar-primary navbar-top">
     <div class="container">
       <div class="row">
+        <div class="col-m-6 col-s-6 text-left oculto">
+          <h5 class="sub-brand"><img src="../assets/otto.jpg" height="8 0"> </h5>
+          <!--<h5 class="sub-brand">Vamos Buenos Aires</h5>-->
+        </div>
         <div class="col-m-6 col-s-6">
           <a class="navbar-brand bac-header" href="index.html" data-original-title="" title=""></a>
         </div>
@@ -17,17 +21,13 @@
     </div>
   </header>
 
-<div class="row">
-    <div class="col-xl-1">.col-md-1</div>
-    <div class="col-xl-1">.col-md-1</div>
-    <div class="col-xl-1">.col-md-1</div>
-    <div class="col-xl-1">.col-md-1</div>
-    <div class="col-xl-1">.col-md-1</div>
-    <div class="col-xl-1">.col-md-1</div>
-    <div class="col-xl-1">.col-md-1</div>
-    <div class="col-xl-1">.col-md-1</div>
-    <div class="col-xl-1">.col-md-1</div>
-    <div class="col-xl-1">.col-md-1</div>
-    <div class="col-xl-1">.col-md-1</div>
-    <div class="col-xl-1">.col-md-1</div>
-</div>
+  <div class="container">
+    <a href="index.html"><button class="btn btn-custom">Inicio</button></a>
+    <a href="index.html"><button class="btn btn-custom">Institucional</button></a>
+    <a href="index.html"><button class="btn btn-custom">Carreras</button></a>
+    <a href="index.html"><button class="btn btn-custom">Ingreso</button></a>
+    <a href="index.html"><button class="btn btn-custom">Extensión terciaria</button></a>
+    <a href="index.html"><button class="btn btn-custom">Convenios</button></a>
+    <a href="index.html"><button class="btn btn-custom">Contacto</button></a>
+  </div>
+  
