--- a/ifts6/src/app/app.component.html
+++ b/ifts6/src/app/app.component.html
@@ -23,11 +23,11 @@
 
   <div class="container">
     <a href="index.html"><button class="btn btn-custom">Inicio</button></a>
-    <a href="index.html"><button class="btn btn-custom">Institucional</button></a>
-    <a href="index.html"><button class="btn btn-custom">Carreras</button></a>
-    <a href="index.html"><button class="btn btn-custom">Ingreso</button></a>
-    <a href="index.html"><button class="btn btn-custom">Extensión terciaria</button></a>
-    <a href="index.html"><button class="btn btn-custom">Convenios</button></a>
-    <a href="index.html"><button class="btn btn-custom">Contacto</button></a>
+    <a href="institucional.html"><button class="btn btn-custom">Institucional</button></a>
+    <a href="carreras.html"><button class="btn btn-custom">Carreras</button></a>
+    <a href="ingreso.html"><button class="btn btn-custom">Ingreso</button></a>
+    <a href="extension.html"><button class="btn btn-custom">Extensión terciaria</button></a>
+    <a href="convenios.html"><button class="btn btn-custom">Convenios</button></a>
+    <a href="contacto.html"><button class="btn btn-custom">Contacto</button></a>
   </div>
   
