--- a/ifts6/src/app/app.component.html
+++ b/ifts6/src/app/app.component.html
@@ -1,33 +1,31 @@
 <header class="navbar navbar-primary navbar-top">
-    <div class="container">
-      <div class="row">
-        <div class="col-m-6 col-s-6 text-left oculto">
-          <h5 class="sub-brand"><img src="../assets/otto.jpg" height="8 0"> </h5>
-          <!--<h5 class="sub-brand">Vamos Buenos Aires</h5>-->
-        </div>
-        <div class="col-m-6 col-s-6">
-          <a class="navbar-brand bac-header" href="index.html" data-original-title="" title=""></a>
-        </div>
-        <div class="col-m-6 col-s-6 text-right oculto">
-          <h5 class="sub-brand"><img src="../assets/bac-header-2.png"></h5>
-          <!--<h5 class="sub-brand">Vamos Buenos Aires</h5>-->
-   <p>Holaaaaaaa</p>
-
-
-
-
-        </div>
+  <div class="container">
+    <div class="row">
+      <div class="col-m-6 col-s-6 text-left oculto">
+        <h5 class="sub-brand"><img src="../assets/otto.jpg" height="8 0"> </h5>
+        <!--<h5 class="sub-brand">Vamos Buenos Aires</h5>-->
       </div>
+      <div class="col-m-6 col-s-6">
+        <a class="navbar-brand bac-header" href="index.html" data-original-title="" title=""></a>
+      </div>
+      <div class="col-m-6 col-s-6 text-right oculto">
+        <h5 class="sub-brand"><img src="../assets/bac-header-2.png"></h5>
+        <!--<h5 class="sub-brand">Vamos Buenos Aires</h5>-->
+
+
+      </div>
+
     </div>
-  </header>
+  </div>
 
   <div class="container">
-    <a href="index.html"><button class="btn btn-custom">Inicio</button></a>
-    <a href="institucional.html"><button class="btn btn-custom">Institucional</button></a>
-    <a href="carreras.html"><button class="btn btn-custom">Carreras</button></a>
-    <a href="ingreso.html"><button class="btn btn-custom">Ingreso</button></a>
-    <a href="extension.html"><button class="btn btn-custom">Extensión terciaria</button></a>
-    <a href="convenios.html"><button class="btn btn-custom">Convenios</button></a>
-    <a href="contacto.html"><button class="btn btn-custom">Contacto</button></a>
-  </div>
-  
+    <a href="index.component.html"><button class="btn btn-custom">Inicio</button></a>
+    <a (click) = "irInstitucional()"><button class="btn btn-custom">Institucional</button></a>
+    <a href="carreras.component.html"><button class="btn btn-custom">Carreras</button></a>
+    <a href="ingreso.component.html"><button class="btn btn-custom">Ingreso</button></a>
+    <a href="extension.component.html"><button class="btn btn-custom">Extensión terciaria</button></a>
+    <a href="convenios.component.html"><button class="btn btn-custom">Convenios</button></a>
+    <a href="contacto.component.html"><button class="btn btn-custom">Contacto</button></a>
+</div>
+</header>
+
