--- a/ifts6/src/app/pages/contacto/contacto.component.html
+++ b/ifts6/src/app/pages/contacto/contacto.component.html
@@ -1,1 +1,36 @@
-<p>contacto works!</p>
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mi Instituto</title>
+    <link rel="stylesheet" href="contacto.component.css">
+</head>
+<body>
+    <div class="container">
+        <h1>Métodos de contacto ITFS6</h1>
+
+        <div class="contact-section">
+            <h2>Contactos telefónicos:</h2>
+            <ul>
+                <li>Bedelía: +1234567890</li>
+                <li>Secretaría académica: +9876543210 | contacto1@example.com</li>
+                <li>Centro de estudiantes: +1112233445 | contacto2@example.com</li>
+                <li>Librería: +1112233445 | contacto3@example.com</li>
+            </ul>
+        </div>
+
+        <div class="contact-section">
+            <h2>Horarios de atención:</h2>
+            <ul>
+                <li>8:00 a 22:00</li>
+            </ul>
+        </div>
+
+        <div class="map-section">
+            <h2>Ubicación en Google Maps:</h2>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3283.562795248999!2d-58.368763799999996!3d-34.6152155!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95a33530840b7173%3A0x6c07abba27aab73e!2zSUZUUyBOwrA2!5e0!3m2!1ses-419!2sar!4v1696888812521!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+    </div>
+</body>
+</html>
