--- a/ifts6/src/app/components/footer/footer.component.css
+++ b/ifts6/src/app/components/footer/footer.component.css
@@ -2,14 +2,46 @@ footer {
     position: fixed;
     bottom: 0;
     width: 100%;
-    background-color: #f9f9f9;
-    color: #333;
+    background-color: #FFD300;
+    color: #333     ;
     text-align: center;
     padding: 20px 0;
   }
   
   .footer-content {
-    font-size: 18px;
-    font-weight: bold;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .footer-left {
+    text-align: left;
+    padding-right: 10px;
+  }
+  .footer-center {
+    flex: 1;
   }
   
+  .footer-right {
+    text-align: right;
+    padding-right: 10px;
+  }
+  .icon-container {
+    padding-right: 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  
+  /* Estilos opcionales para los iconos */
+  .fa {
+    font-size: 24px;
+    padding: 10px;
+  }
+  
+.iconst{
+    max-width: 32px;
+    height: auto;
+    padding-left: 2px;
+    padding-right: 2px;
+}
