--- a/ifts6/src/app/components/footer/footer.component.html
+++ b/ifts6/src/app/components/footer/footer.component.html
@@ -1,5 +1,36 @@
 <footer>
+
   <div class="footer-content">
-    <p>Este es el fin</p>
+    <div class="icon-container">
+
+      <a href="https://www.facebook.com" target="_blank">
+        <img class="iconst" src="assets/instagram.png" alt="Instagram">
+      </a>
+      <a href="https://www.facebook.com" target="_blank">
+        <img class="iconst" src="assets/facebook.png" alt="Facebook">
+      </a>
+      <a href="https://www.linkedin.com" target="_blank">
+        <img class="iconst" src="assets/linkedin.png" alt="LinkedIn">
+      </a>
+      <a href="https://www.twitter.com" target="_blank">
+        <img class="iconst" src="assets/twitter.png" alt="X">
+      </a>
+      <a href="https://www.whatsapp.com" target="_blank">
+        <img class="iconst" src="assets/whatsapp.png" alt="Whatsapp">
+      </a>
+      <a href="https://www.youtube.com" target="_blank">
+        <img class="iconst" src="assets/youtube.png" alt="Youtube">
+      </a>
+
+
+    </div>
+    <div class="footer-center">
+      <p>IFTS6</p>
+    </div>
+    <div class="footer-right">
+      <p class="links">
+        <a href="https://www.argentina.gob.ar/educacion" target="_blank">Ministerio de Educación de Argentina</a>
+      </p>
+    </div>
   </div>
-</footer><nav></nav>
+</footer>
