--- a/ifts6/src/app/components/footer/footer.component.html
+++ b/ifts6/src/app/components/footer/footer.component.html
@@ -25,7 +25,7 @@
 
     </div>
     <div class="footer-center">
-      <p>IFTS6</p>
+      <p>Instituto de Formación Técnica Superior – IFTS6</p>
     </div>
     <div class="footer-right">
       <p class="links">
