--- a/ifts6/src/app/components/header/header.component.html
+++ b/ifts6/src/app/components/header/header.component.html
@@ -1,27 +1,41 @@
-<header class="navbar navbar-primary navbar-top">
-    <div class="container">
-        <div class="row">
-            <!-- <div class="col-m-6 col-s-6 text-left oculto">
+<header class="navbar navbar-primary navbar-top ">
+    <div class=" fondo">
+        <div class="container">
+            <div class="row">
+             
+                <div class= "col-m-6 col-s-6">
+                    <h5><img class="imagen" src="../assets/logo2.png"></h5>
+                    
+                    <!-- <img src="" class="bac-header" > -->
+                </div>
+                <!-- <div class="col-m-6 col-s-6 text-left oculto">
                 <h5 class="sub-brand"><img src="../assets/otto.jpg" height="8 0"> </h5>
             </div> -->
-            <div class="col-m-6 col-s-6">
-                <a class="navbar-brand bac-header" href="index.html" data-original-title="" title=""></a>
+                <!-- <div class="col-m-6 col-s-6">
+                    <a class="navbar-brand bac-header" href="index.html" data-original-title="" title=""></a>
+                </div> -->
+                <div class="col-m-6 col-s-6 text-right oculto">
+                    
+                    <h5 class="sub-brand"><img src="../assets/bac-header-2.png"></h5>
+                   
+                </div>
             </div>
-            <div class="col-m-6 col-s-6 text-right oculto">
-                <h5 class="sub-brand"><img src="../assets/bac-header-2.png"></h5>
-            </div>
-        </div>
-    </div>
 
-    <div class="container">
-        <div class="contenedor-botones">
-            <a (click)="irPagina('')"><button class="btn btn-custom">Inicio</button></a>
-            <a (click)="irPagina('institucional')"><button class="btn btn-custom">Institucional</button></a>
-            <a (click)="irPagina('carreras')"><button class="btn btn-custom">Carreras</button></a>
-            <a (click)="irPagina('ingreso')"><button class="btn btn-custom">Ingreso</button></a>
-            <a (click)="irPagina('extension')"><button class="btn btn-custom">Extensión terciaria</button></a>
-            <a (click)="irPagina('convenios')"><button class="btn btn-custom">Convenios</button></a>
-            <a (click)="irPagina('contacto')"><button class="btn btn-custom">Contacto</button></a>
+
+            <div class="container">
+                <div class="contenedor-botones">
+                    <a (click)="irPagina('')"><button class="btn btn-custom">Inicio</button></a>
+                    <a (click)="irPagina('institucional')"><button class="btn btn-custom">Institucional</button></a>
+                    <a (click)="irPagina('carreras')"><button class="btn btn-custom">Carreras</button></a>
+                    <a (click)="irPagina('ingreso')"><button class="btn btn-custom">Ingreso</button></a>
+                    <a (click)="irPagina('extension')"><button class="btn btn-custom">Extensión terciaria</button></a>
+                    <a (click)="irPagina('convenios')"><button class="btn btn-custom">Convenios</button></a>
+                    <a (click)="irPagina('contacto')"><button class="btn btn-custom">Contacto</button></a>
+                                     aaaaaaaaaaaa
+                </div> 
+
+            </div>
+          
         </div>
     </div>
 </header>
