--- a/ifts6/src/app/components/header/header.component.html
+++ b/ifts6/src/app/components/header/header.component.html
@@ -2,22 +2,13 @@
     <div class=" fondo">
         <div class="container">
             <div class="row">
-             
-                <div class= "col-m-6 col-s-6">
-                    <h5><img class="imagen" src="../assets/logo2.png"></h5>
-                    
-                    <!-- <img src="" class="bac-header" > -->
+
+                <div class="col-m-6 col-s-6 text-left oculto">
+                <h5><img src="assets/logo2.png" style="width: 100px;"></h5>
                 </div>
-                <!-- <div class="col-m-6 col-s-6 text-left oculto">
-                <h5 class="sub-brand"><img src="../assets/otto.jpg" height="8 0"> </h5>
-            </div> -->
-                <!-- <div class="col-m-6 col-s-6">
-                    <a class="navbar-brand bac-header" href="index.html" data-original-title="" title=""></a>
-                </div> -->
+
                 <div class="col-m-6 col-s-6 text-right oculto">
-                    
-                    <h5 class="sub-brand"><img src="../assets/bac-header-2.png"></h5>
-                   
+                <h5 class="sub-brand"><img src="../assets/bac-header-2.png"></h5>
                 </div>
             </div>
 
@@ -31,11 +22,11 @@
                     <a (click)="irPagina('extension')"><button class="btn btn-custom">Extensión terciaria</button></a>
                     <a (click)="irPagina('convenios')"><button class="btn btn-custom">Convenios</button></a>
                     <a (click)="irPagina('contacto')"><button class="btn btn-custom">Contacto</button></a>
-                                     aaaaaaaaaaaa
-                </div> 
+
+                </div>
 
             </div>
-          
+
         </div>
     </div>
 </header>
