--- a/ifts6/src/app/pages/ingreso/ingreso.component.html
+++ b/ifts6/src/app/pages/ingreso/ingreso.component.html
@@ -1,4 +1,4 @@
-<p>🌜🖼️ REABRE EL MUSEO DE LA ADUANA Y SERÁ PARTE DE LA NOCHE DE LOS MUSEOS </p>
+<p><b>🌜🖼️ REABRE EL MUSEO DE LA ADUANA Y SERÁ PARTE DE LA NOCHE DE LOS MUSEOS </b></p>
 
     
 <p>Es un espacio cultural que recorre los 400 años de historia que tiene el organismo. Se exponen documentos originales, testimonios y artefactos propios de la actividad. El museo ofrece actividades interactivas y lúdicas para público de todas las edades.</p>
@@ -10,37 +10,38 @@
 <p>Listado de ingresantes 2°Cuatrimestre 2023</p>
 <p>Estimados ingresantes a la carrera Técnico superior en comercio internacional y aduanas:</p>
 
-En este artículo encontrarán la lista de alumnos ingresantes correspondientes al segundo cuatrimestre 2023 ordenado alfabéticamente por apellidos 
+<p>En este artículo encontrarán la lista de alumnos ingresantes correspondientes al segundo cuatrimestre 2023 ordenado alfabéticamente por apellidos </p>
 
-Es importante señalar que en este listado están quienes cumnplieron el requisito de validación de su documentación en forma presencial en el instituto. 
+<p> Es importante señalar que en este listado están quienes cumnplieron el requisito de validación de su documentación en forma presencial en el instituto. </p>
 
-En el listado podrán visualizar:
+<p>En el listado podrán visualizar:</p>
 
-Número de Legajo: es el número que los identificará dentro del IFTS N°6
+<p>Número de Legajo: es el número que los identificará dentro del IFTS N°6</p>
 
-Usuario y contraseña del usuario de gestión SIU. No es necesario que ingresen ahora pero van a neceitar para las siguientes inscripciones y consultar sus calificaciones. Les sugerimos modificar la contraseña una vez que ingresaron.
+<p>Usuario y contraseña del usuario de gestión SIU. No es necesario que ingresen ahora pero van a neceitar para las siguientes inscripciones y consultar sus calificaciones. Les sugerimos modificar la contraseña una vez que ingresaron.</p>
 
-Comisión asignada.
+<p>Comisión asignada.</p>
 
-El inicio de clases es el lunes 14 de agosto a las 18:30 hs.
+<p>El inicio de clases es el lunes 14 de agosto a las 18:30 hs.</p>
 
-Listado de ingresantes 2° Cuatrimestre 2023 actualizado al 10/08/2023 aqui. .  . 
+<p>Listado de ingresantes 2° Cuatrimestre 2023 actualizado al 10/08/2023 aqui. .  . </p>
 
-La ubicación de las aulas estarán en el segundo piso:
+<p>La ubicación de las aulas estarán en el segundo piso:</p>
 
-Comisiones	Ubicación	Escalera
+<p>Comisiones	Ubicación	Escalera></p>
 101	2°Piso	Chile (galería que da al patio)	Chile (derecha)
 102	2°Piso	Chile (galería que da al patio)	Chile (derecha)
 103	2°Piso	Chile (galería que da al patio)	Chile (derecha)
 104	2°Piso	Chile	Chile (derecha)
 105	2°Piso	Chile	Chile (derecha)
-Ingresando en la plataforma de aulas virtuales podrán comenzar a ver el contenido de las clases a partir del lunes 14 de agosto. El lunes 14/08 las comisiones 101, 102, 103 y 105 tendrán clases presenciales, la comisión 104 tendrá clase virtual asincrónca (en aulas virtuales).
 
- ¡ Les deseamos un muy buen comienzo de clases !
+<p>Ingresando en la plataforma de aulas virtuales podrán comenzar a ver el contenido de las clases a partir del lunes 14 de agosto. El lunes 14/08 las comisiones 101, 102, 103 y 105 tendrán clases presenciales, la comisión 104 tendrá clase virtual asincrónca (en aulas virtuales).</p>
+
+ <p><b>¡ Les deseamos un muy buen comienzo de clases !</b></p>
 
  
 
-Título con validez Nacional
+<b>Título con validez Nacional</b>
 Consultas sobre la validez nacional de los títulos emitidos por el IFTS6, les recordamos que quienes están terminando la carrera con el plan anterior, como quienes han comenzado desde el 2013 con el plan aprobado por la Resolución Nro 375/12/SSGEyCP - GCBA, tienen garantizada la validez nacional de sus títulos.
 
 Leer más: Título con validez Nacional
