--- a/ifts6/src/app/components/footer/footer.component.html
+++ b/ifts6/src/app/components/footer/footer.component.html
@@ -1,35 +1,35 @@
 <footer>
 
   <div class="footer-content">
-    <div class="icon-container">
-
-      <a href="https://www.facebook.com" target="_blank">
-        <img class="iconst" src="assets/instagram.png" alt="Instagram">
+    
+      <div class="footer-left">
+        <p class="links">
+     <a href="https://www.facebook.com" target="_blank">
+        <img class="iconst" src="assets/faceNegro.png" alt="Facebook">
       </a>
       <a href="https://www.facebook.com" target="_blank">
-        <img class="iconst" src="assets/facebook.png" alt="Facebook">
-      </a>
-      <a href="https://www.linkedin.com" target="_blank">
-        <img class="iconst" src="assets/linkedin.png" alt="LinkedIn">
-      </a>
-      <a href="https://www.twitter.com" target="_blank">
-        <img class="iconst" src="assets/twitter.png" alt="X">
+        <img class="iconst" src="assets/instaNegro.png" alt="Instagram">
       </a>
       <a href="https://www.whatsapp.com" target="_blank">
-        <img class="iconst" src="assets/whatsapp.png" alt="Whatsapp">
+        <img class="iconst" src="assets/whatNegro.png" alt="Whatsapp">
       </a>
       <a href="https://www.youtube.com" target="_blank">
-        <img class="iconst" src="assets/youtube.png" alt="Youtube">
+        <img class="iconst" src="assets/ybNegro.png" alt="Youtube">
       </a>
+        </p>
+      </div>
 
-
-    </div>
+    
     <div class="footer-center">
-      <p>Instituto de Formación Técnica Superior – IFTS6</p>
+      <p>Instituto de Formación Técnica Superior Nº6</p>
+      <b> Técnico Superior en Comercio Internacional y Aduanas</b>
+       <p>
+        Avenida Paseo Colón 650,<br>
+        Monserrat,C.A.B.A </p>
     </div>
     <div class="footer-right">
       <p class="links">
-        <a href="https://www.argentina.gob.ar/educacion" target="_blank">Ministerio de Educación de Argentina</a>
+        <a href="https://www.argentina.gob.ar/educacion" target="_blank"><img src="assets/minis.png" style="width: 140px;"></a>
       </p>
     </div>
   </div>
