--- a/ifts6/src/app/components/header/header.component.html
+++ b/ifts6/src/app/components/header/header.component.html
@@ -1,8 +1,9 @@
-<header class="navbar navbar-primary navbar-top ">
+<header>
     <div class=" fondo">
 
         <div class="container">
-            <div class="row">
+            
+<div class="row">
                 <div class="col-m-6 col-s-6 text-left oculto">
                     <h5><img src="assets/logo2.png" style="width: 100px;"></h5>
                 </div>
@@ -11,7 +12,6 @@
                     <h5 class="sub-brand"><img src="../assets/bac-header-2.png"></h5>
                 </div>
             </div>
-
 
             <div class="container">
                 <div class="contenedor-botones">
