--- a/ifts6/src/app/components/footer/footer.component.html
+++ b/ifts6/src/app/components/footer/footer.component.html
@@ -4,16 +4,16 @@
     
       <div class="footer-left">
         <p class="links">
-     <a href="https://www.facebook.com" target="_blank">
+     <a href="https://www.facebook.com/CEIFTS6" target="_blank">
         <img class="iconst" src="assets/faceNegro.png" alt="Facebook">
       </a>
-      <a href="https://www.facebook.com" target="_blank">
+      <a href="https://www.instagram.com/cde.ifts6/" target="_blank">
         <img class="iconst" src="assets/instaNegro.png" alt="Instagram">
       </a>
       <a href="https://www.whatsapp.com" target="_blank">
         <img class="iconst" src="assets/whatNegro.png" alt="Whatsapp">
       </a>
-      <a href="https://www.youtube.com" target="_blank">
+      <a href="https://www.youtube.com/@ifts6459" target="_blank">
         <img class="iconst" src="assets/ybNegro.png" alt="Youtube">
       </a>
         </p>
