--- a/ifts6/src/app/components/header/header.component.html
+++ b/ifts6/src/app/components/header/header.component.html
@@ -15,9 +15,11 @@
             
            
                 <div class="container">
-
-                <img src="assets/otto.jpg" style="width: 200px;">
-
+                    
+                    <header class="header">
+                        <img class="imgifts6" src="assets/civil.png" alt="Imagen de encabezado" >
+                      </header>
+            
                 <div class="contenedor-botones">
                     <a (click)="irPagina('')"><button class="btn btn-custom">Inicio</button></a>
                     <a (click)="irPagina('institucional')"><button class="btn btn-custom">Institucional</button></a>
