--- a/ifts6/src/app/components/footer/footer.component.html
+++ b/ifts6/src/app/components/footer/footer.component.html
@@ -2,7 +2,7 @@
 
   <div class="footer-content">
     
-      <div class="footer-left">
+      <div class="footer-left ">
         <p class="links">
      <a href="https://www.facebook.com/CEIFTS6" target="_blank">
         <img class="iconst" src="assets/faceNegro.png" alt="Facebook">
@@ -29,7 +29,7 @@
     </div>
     <div class="footer-right">
       <p class="links">
-        <a href="https://www.argentina.gob.ar/educacion" target="_blank"><img src="assets/minis.png" style="width: 140px;"></a>
+        <a href="https://www.argentina.gob.ar/educacion" target="_blank"><img src="assets/logo_mda.png" style="width: 140px; "></a>
       </p>
     </div>
   </div>
