--- a/ifts6/src/app/components/header/header.component.css
+++ b/ifts6/src/app/components/header/header.component.css
@@ -1,17 +1,15 @@
 @media (min-width: 1200px) {
     .container {
-        width: 1170px;
-
+        max-width: 1170px;
+        width: 100%;
     }
 }
-
 
 .fondo {
     background-color: #FFD300;
 }
 
 .container {
-
     padding-right: 15px;
     padding-left: 15px;
     margin-right: auto;
@@ -31,13 +29,26 @@
 .header {
     position: relative;
     width: 100%;
-     height: 200px; /* Ajusta la altura del encabezado según tus necesidades */
-     background-color: #333; /*Cambia el color de fondo según tus preferencias */
-  
-  
-  }  
-  .imgifts6 {
-      width: 100%;
-      height: 100%;
-      object-fit: cover; /*Esto hará que la imagen ocupe todo el espacio del encabezado sin distorsionarla */
-    }
+    height: 200px; /* Ajusta la altura del encabezado según tus necesidades */
+    background-color: #333; /*Cambia el color de fondo según tus preferencias */
+    text-align: center; /* Alinea el texto al centro del header */
+}  
+
+.imgifts6 {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /*Esto hará que la imagen ocupe todo el espacio del encabezado sin distorsionarla */
+  }
+
+.contenedor-botones {
+    text-align: center; /* Centra los botones horizontalmente */
+     background-color:#1d1c1a;
+    
+}
+
+.btn {
+    margin: 5px; /* Añade espacio entre los botones */
+ 
+    border-radius: 10px; /* Radio de las esquinas (ajusta según tus preferencias) */
+    
+}
