--- a/ifts6/src/app/components/header/header.component.html
+++ b/ifts6/src/app/components/header/header.component.html
@@ -1,38 +1,38 @@
-<header>
-    <div class=" fondo">
-
-        <div class="container">
-           
-            <div class="row">
-                <div class="col-m-6 col-s-6 text-left oculto">
-                    <h5><img src="assets/logo2.png" style="width: 100px;"></h5>
-                </div>
-
-                <div class="col-m-6 col-s-6 text-right oculto">
-                    <h5 class="sub-brand"><img src="../assets/bac-header-2.png"></h5>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="header.component.css">
+    <title>Tu Página</title>
+</head>
+<body>
+    <header>
+        <div class="fondo">
+            <div class="container">
+                <div class="row">
+                    <div class="col-m-6 col-s-6 text-left oculto">
+                        <h5 class="sub-brand"><img src="assets/logo2.png" style="width: 100px; "></h5>
+                    </div>
+                    <div class="col-m-6 col-s-6 text-right oculto">
+                        <h5 class="sub-brand"><img src="../assets/bac-header-2.png " style="margin-top: 20px; margin-left: 400px;"></h5>
+                    </div>
                 </div>
             </div>
-            
-           
-                <div class="container">
-                    
-                    <header class="header">
-                        <img class="imgifts6" src="assets/civil.png" alt="Imagen de encabezado" >
-                      </header>
-            
-                <div class="contenedor-botones">
-                    <a (click)="irPagina('')"><button class="btn btn-custom">Inicio</button></a>
-                    <a (click)="irPagina('institucional')"><button class="btn btn-custom">Institucional</button></a>
-                    <a (click)="irPagina('carreras')"><button class="btn btn-custom">Carreras</button></a>
-                    <a (click)="irPagina('ingreso')"><button class="btn btn-custom">Ingreso</button></a>
-                    <a (click)="irPagina('extension')"><button class="btn btn-custom">Extensión terciaria</button></a>
-                    <a (click)="irPagina('convenios')"><button class="btn btn-custom">Convenios</button></a>
-                    <a (click)="irPagina('contacto')"><button class="btn btn-custom">Contacto</button></a>
-
-                </div>
-
+            <div class="header">
+                <img class="imgifts6" src="assets/civil.png" alt="Imagen de encabezado">
             </div>
-
+            <div class="contenedor-botones" >
+                <a (click)="irPagina('')"><button class="btn btn-custom">Inicio</button></a>
+                <a (click)="irPagina('institucional')"><button class="btn btn-custom">Institucional</button></a>
+                <a (click)="irPagina('carreras')"><button class="btn btn-custom">Carreras</button></a>
+                <a (click)="irPagina('ingreso')"><button class="btn btn-custom">Ingreso</button></a>
+                <a (click)="irPagina('extension')"><button class="btn btn-custom">Extensión terciaria</button></a>
+                <a (click)="irPagina('convenios')"><button class="btn btn-custom">Convenios</button></a>
+                <a (click)="irPagina('contacto')"><button class="btn btn-custom">Contacto</button></a>
+            </div>
+            
         </div>
-    </div>
-</header>
+    </header>
+</body>
+</html>
