--- a/ifts6/src/app/components/table/table.component.html
+++ b/ifts6/src/app/components/table/table.component.html
@@ -1,5 +1,5 @@
 <div class="card">
-    <p-table [columns]="columnas" [value]="filas" [tableStyle]="{ 'min-width': '50rem' }">
+    <p-table id="customers"[columns]="columnas" [value]="filas" [tableStyle]="{ 'min-width': '50rem' }">
         <ng-template pTemplate="header" let-columns>
             <tr>
                 <th *ngFor="let col of columns">
@@ -13,8 +13,8 @@
                     {{ rowData[col.field] }}
                 </td>
                 <td>
-                    <button (click) = "borrar(rowData)"> Borrar </button>
-                    <button (click) = "modificar(rowData)"> Modificar </button>
+                    <button class="pi pi-trash icono_trash" (click) = "borrar(rowData)"> Borrar </button>
+                    <button class="pi pi-pencil icono_edit" (click) = "modificar(rowData)"> Modificar </button>
                 </td>
             </tr>
         </ng-template>
