--- a/ifts6/src/app/pages/contacto/contacto.component.html
+++ b/ifts6/src/app/pages/contacto/contacto.component.html
@@ -1,14 +1,13 @@
 <div class="contenedor-principal">
-    <div class="container">
+
+    <div class="container" >
         <h1>Métodos de contacto ITFS6</h1>
 
         <div class="contact-section">
             <h2>Contactos telefónicos:</h2>
             <ul>
-                <li>Bedelía: +1234567890</li>
-                <li>Secretaría académica: +9876543210 | contacto1@example.com</li>
-                <li>Centro de estudiantes: +1112233445 | contacto2@example.com</li>
-                <li>Librería: +1112233445 | contacto3@example.com</li>
+
+                <li>Información IFTS6 | info@ifts6.edu.ar</li>
             </ul>
         </div>
 
