--- a/ifts6/src/app/components/table/table.component.html
+++ b/ifts6/src/app/components/table/table.component.html
@@ -13,8 +13,8 @@
                     {{ rowData[col.field] }}
                 </td>
                 <td>
-                    <button class="pi pi-trash icono_trash" (click) = "borrar(rowData)"> Borrar </button>
-                    <button class="pi pi-pencil icono_edit" (click) = "modificar(rowData)"> Modificar </button>
+                    <button class="pi pi-trash icono_trash" (click) = "borrar(rowData)">  </button>
+                    <button class="pi pi-pencil icono_edit" (click) = "modificar(rowData)">  </button>
                 </td>
             </tr>
         </ng-template>
