--- a/ifts6/src/app/pages/ingreso/ingreso.component.html
+++ b/ifts6/src/app/pages/ingreso/ingreso.component.html
@@ -1,109 +1,1 @@
-<p><b>🌜🖼️ REABRE EL MUSEO DE LA ADUANA Y SERÁ PARTE DE LA NOCHE DE LOS MUSEOS </b></p>
-
-    
-<p>Es un espacio cultural que recorre los 400 años de historia que tiene el organismo. Se exponen documentos originales, testimonios y artefactos propios de la actividad. El museo ofrece actividades interactivas y lúdicas para público de todas las edades.</p>
-
-<p>🐶🎶 También habrá visitas guiadas del Palacio de Aduanas que fue declarado Monumento Histórico Nacional en 2009. Habrá shows musicales en vivo y demostraciones de búsqueda de los binomios aduaneros: guía-can.</p>
-
-<p>📝 Las actividades se realizan el sábado 23 de septiembre de 19:00 a 1:00 am. La dirección es Azopardo 350.</p>
-
-<p>Listado de ingresantes 2°Cuatrimestre 2023</p>
-<p>Estimados ingresantes a la carrera Técnico superior en comercio internacional y aduanas:</p>
-
-<p>En este artículo encontrarán la lista de alumnos ingresantes correspondientes al segundo cuatrimestre 2023 ordenado alfabéticamente por apellidos </p>
-
-<p> Es importante señalar que en este listado están quienes cumnplieron el requisito de validación de su documentación en forma presencial en el instituto. </p>
-
-<p>En el listado podrán visualizar:</p>
-
-<p>Número de Legajo: es el número que los identificará dentro del IFTS N°6</p>
-
-<p>Usuario y contraseña del usuario de gestión SIU. No es necesario que ingresen ahora pero van a neceitar para las siguientes inscripciones y consultar sus calificaciones. Les sugerimos modificar la contraseña una vez que ingresaron.</p>
-
-<p>Comisión asignada.</p>
-
-<p>El inicio de clases es el lunes 14 de agosto a las 18:30 hs.</p>
-
-<p>Listado de ingresantes 2° Cuatrimestre 2023 actualizado al 10/08/2023 aqui. .  . </p>
-
-<p>La ubicación de las aulas estarán en el segundo piso:</p>
-
-<p>Comisiones	Ubicación	Escalera></p>
-101	2°Piso	Chile (galería que da al patio)	Chile (derecha)
-102	2°Piso	Chile (galería que da al patio)	Chile (derecha)
-103	2°Piso	Chile (galería que da al patio)	Chile (derecha)
-104	2°Piso	Chile	Chile (derecha)
-105	2°Piso	Chile	Chile (derecha)
-
-<p>Ingresando en la plataforma de aulas virtuales podrán comenzar a ver el contenido de las clases a partir del lunes 14 de agosto. El lunes 14/08 las comisiones 101, 102, 103 y 105 tendrán clases presenciales, la comisión 104 tendrá clase virtual asincrónca (en aulas virtuales).</p>
-
- <p><b>¡ Les deseamos un muy buen comienzo de clases !</b></p>
-
- 
-
-<b>Título con validez Nacional</b>
-Consultas sobre la validez nacional de los títulos emitidos por el IFTS6, les recordamos que quienes están terminando la carrera con el plan anterior, como quienes han comenzado desde el 2013 con el plan aprobado por la Resolución Nro 375/12/SSGEyCP - GCBA, tienen garantizada la validez nacional de sus títulos.
-
-Leer más: Título con validez Nacional
-
-Ingreso 2023 2°Cuatrimestre - INSCRIPCIÓN FINALIZADA
-Este artículo está destinado a los aspirantes a ingresar al 2°cuatrimestre de la carrera Técnico Superior en Comercio Internacional y aduanas por primera vez y no para alumnos del instituto.
-
-Se informa que ya se encuentra habilitada la segunda etapa de inscripción  para ingresantes al 2° Cuatrimestre 2023 del 1 al 8 de agosto.
-
-Deberán realizar los siguinetes pasos:
-
-Enviar un mail a ingreso@ifts6.edu.ar indicando en el asunto: su Apellido, Nombre, Número de DNI - Inscripción 2°Cuatrimestre 2023. Adjuntar:  DNI escaneado de ambos lados, el título analítico de secundario escaneado de ambos lados (o constancia de título en trámite actualizada) y el comprobante (PDF) generado en la preinscripción (en caso de haberla realizado). Si los estudios los ha cursado en el exterior, tener en cuenta que deberá contar con la correspondiente convalidación.
-Presentarse en el Instituto con la documentación original del 01/08 al 08/08 de lunes a viernes de 18.30 a 21hs.
-Crearse un usuario en esta web. Será dado de alta al momento de validar la documentación.
-La dirección del Instituto es Av. Paseo Colón 650 CABA
-
-El horario de cursada es de 18:30 a 22:30hs
-
-La inscripción estará confirmada luego de realizar el proceso de validación y control de la documentación original. Si ya realizó los pasos anteriores no debe repetirlos.
-
-Nuevo Plan de estudios
-En el mes de abril del año 2012 se firmó mediante resolución del Ministerio de Educación del Gobierno de la Ciudad de Buenos Aires, la creación del nuevo plan de estudios de nuestro establecimiento.
-
-Leer más: Nuevo Plan de estudios
-
-Revista Comercio Exterior
-Adjuntamos un ejemplar electrónico de la revista Comercio Exterior con importantes artículos publicados por prestigiosos profesionales de la materia.
-
-Descargar acá
-
-Modalidad de cursada
-La carrera se cursa de lunes a viernes en el único horario de 18:30 a 22:30 y la modalidad es presencial con la obligatoriedad de concurrir a un mínimo del 75% de las clases, para no perder la condición de alumno regular.
-
-Sitio WEB
-IMPORTANTE
-
-Se recuerda a todos los alumnos que este sitio web tiene distintos niveles de visualización:
-
-1.- Público: Toda la información institucional de divulgación masiva.
-
-2.- Registrados (aquellos que han creado un usuario): Que podrán visualizar algunos datos más que en el caso anterior.
-
-3.- Alumnos/Docentes: Este nivel de visualización es el que les permite a todos los alumnos del IFTS6 y Docentes, poder visualizar la TOTALIDAD de la información que el IFTS pretende comunicar (mesas de examen, tutoriales, acceso al sistema de gestión, etc.). Para que este nivel sea activado es preciso que remitan un mail a bedelia@ifts6.edu.ar o a administrador@ifts6.edu.ar mencionando el usuario con el que se registraron y solicitando que se le asigne este nuevo nivel por el hecho de ser alumno. Esta situación ya ha sido subsanada desde el ingreso que ha comenzado en mayo 2020, por lo que alumnos anteriores que no tengan la visibilidad completa, deberán solicitarlo.
-
-Alcances de la Titulación
-El Técnico Superior en Comercio Internacional y Aduanas egresado de esta carrera podrá desempeñarse en:
-
-Leer más: Alcances de la Titulación
-
-Contenido del Plan de estudios 1993 Alumnos
-Las Materias correspondientes al viejo  plan de de Estudios (no vigente para la cursada desde el año lectivo 2015), pueden ser consultadas pueden a continuacion:
-
-Leer más: Contenido del Plan de estudios 1993 Alumnos
-
-Como llegar al IFTS6
-El IFTS6 se encuentra ubicado en la Avenida Paseo Colón 650 de la Ciudad Autónoma de Buenos Aires.
-
-Para visualizar la ubicación exacta del establecimiento puede hacer click acá
-
-Más artículos...
-Finalidad de la Carrera
-Generalidades
-Historia
-Perfil del Egresado
-Página 1 de 2
+<app-publicaciones [criterio]=""></app-publicaciones>
