--- a/ifts6/src/app/components/table/table.component.css
+++ b/ifts6/src/app/components/table/table.component.css
@@ -1,3 +1,4 @@
+@import "primeicons/primeicons.css";
 .card{
     margin-top: 20px;
 }
@@ -21,8 +22,8 @@
     padding-top: 12px;
     padding-bottom: 12px;
     text-align: left;
-    background-color: #9b59b6;
-    color: white;
+    background-color: #c5c3c2;
+    color: rgb(12, 6, 6);
   }
 
   .icono_edit{
