--- a/ifts6/src/app/components/table/table.component.css
+++ b/ifts6/src/app/components/table/table.component.css
@@ -1,10 +1,11 @@
 @import "primeicons/primeicons.css";
 .card{
     margin-top: 20px;
+    
 }
 
 #customers {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family:sans-serif;
     border-collapse: collapse;
     width: 100%;
   }
