Toque de paginas J

--- a/ifts6/src/app/components/table/table.component.html
+++ b/ifts6/src/app/components/table/table.component.html
@@ -5,6 +5,9 @@
                 <th *ngFor="let col of columns">
                     {{ col.header }}
                 </th>
+                <th>
+                    Acciones
+                </th>
             </tr>
         </ng-template>
         <ng-template pTemplate="body" let-rowData let-columns="columns">
