--- a/ifts6/src/app/pages/extension/extension.component.html
+++ b/ifts6/src/app/pages/extension/extension.component.html
@@ -1,1 +1,1 @@
-<app-publicaciones [criterio]="'Extension terciaria'"></app-publicaciones>
+<app-publicaciones [criterio]="criterioPag"></app-publicaciones>
