--- a/ifts6/src/app/pages/institucional/institucional.component.html
+++ b/ifts6/src/app/pages/institucional/institucional.component.html
@@ -1,1 +1,1 @@
-<app-publicaciones [criterio]="'Institucional'"></app-publicaciones>
+<app-publicaciones [criterio]="criterioPag"></app-publicaciones>
