--- a/ifts6/src/app/components/error404/error404.component.html
+++ b/ifts6/src/app/components/error404/error404.component.html
@@ -14,9 +14,9 @@
                             Parece que estas perdido!
                         </h3>
 
-                        <p>la página que estas buscando no esta disponible!</p>
+                       <h1> <p>la página que estas buscando no esta disponible!</p></h1>
 
-                        <a href="" class="link_404">Volver al Home</a>
+                        <a href="" class="link_404">Volver al Inicio</a>
                     </div>
                 </div>
             </div>
